--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -87,7 +87,7 @@
     .locatie-container {
         flex: 1 1 auto;
 
-        .list-clean {
+        .list-clean:not(.has-padding) {
             margin-top: 0;
         }
 
