Added ability to create Taaktype Categorieën and to manage them.

--- a/app/apps/beheer/templates/beheer.html
+++ b/app/apps/beheer/templates/beheer.html
@@ -17,6 +17,9 @@
         <li>
             <a href="{% url 'standaard_externe_omschrijving_lijst' %}">Standaardteksten</a>
         </li>
+        <li>
+            <a href="{% url 'taaktype_categorie_lijst' %}">Taaktype categorieën</a>
+        </li>
     </ul>
     <h2>Andere Forzamor beheer productie omgevingen</h2>
     <ul class="list--blocks-horizontal">
