--- a/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
+++ b/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
@@ -62,6 +62,7 @@
         {% endfor %}
         {% if field.help_text %}<p class="help-block">{{ field.help_text|safe }}</p>{% endif %}
     </div>
+{% comment %} Werkt nog niet met optgroups {% endcomment %}
 {% elif field|is_select %}
     <div class="form-row col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
         {% if field|is_select_multiple %}
