--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -170,6 +170,28 @@
                                     Melding
                                 </h2>
                                 <div class="display--flex--md">
+                                {% if melding.signalen_voor_melding|length > 0 %}
+                                     <ul class="list-clean">
+                                        <li>
+                                            <h3 class="h5">Meldingnummer</h3>
+                                            <p>
+                                                {% if melding.id %}
+                                                    {{ melding.id }}
+                                                {% else %}
+                                                    -
+                                                {% endif %}
+                                            </p>
+                                        </li>
+                                    </ul>
+                                    <div>
+                                    <ul class="list-tabs">
+                                    {% for signaal in melding.signalen_voor_melding %}
+                                        <li>
+                                            {{ signaal }}
+                                        </li>
+                                    {% endfor %}
+                                    </div>
+                                {% else %}
                                     <ul class="list-clean">
                                         <li>
                                             <h3 class="h5">Meldingnummer</h3>
@@ -241,7 +263,10 @@
                                             </p>
                                         </li>
                                     </ul>
+                                {% endif %}
+
                                 </div>
+                                {{ melding.signalen_voor_melding }}
                             </div>
                         </section>
                         {% include locatie_template %}
