Change to choicefield and select2widget. Change dropdownParent to target the #meldingDetailModal.

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -298,7 +298,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal" data-detail-target="modalAfhandelen">
+        <div class="modal" data-detail-target="modalAfhandelen" id="meldingDetailModal">
             <div class="modal-backdrop modal-exit"
                  id="modal-backdrop"
                  data-action="click->detail#closeModal"></div>
