--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -39,7 +39,9 @@
                 <!-- Initialize select2 -->
                 <script>
                     $(document).ready(function() {
-                        $('.select2').select2();
+                        $('.select2').select2({
+                            dropdownParent: $("#meldingDetailModal")
+                        });
                     });
                 </script>
                 <div class="form-row btn-row">
