--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -205,7 +205,7 @@
                                 <div class="display--flex--md">
                                     <ul class="list-clean">
                                         <li>
-                                            <h3 class="h5">Meldingummer</h3>
+                                            <h3 class="h5">Meldingnummer</h3>
                                             <p>
                                                 {% if melding.id %}
                                                     {{ melding.id }}
