Added optgroup to the taak starten forms based on TaaktypeCategorie

--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -34,9 +34,9 @@
                   enctype="multipart/form-data"
                   novalidate>
                 {% csrf_token %}
-                <div class="form-control__with-helptext">{{ form.taaktype|render_rotterdam_formulier }}</div>
+                <div class="form-control__with-helptext">{{ form.taaktype }}</div> <!-- @TODO Render rotterdam formulier doesnt include optgroups yet -->
                 <div class="form-control__with-helptext">{{ form.bericht|render_rotterdam_formulier }}</div>
-                <!-- Initialize select2 -->
+                <!-- Initialize select2 and target the correct modal -->
                 <script>
                     $(document).ready(function() {
                         $('.select2').select2({
