--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -558,3 +558,47 @@ textarea {
         }
     }
 }
+
+.select2-container--default {
+    width: 100% !important;
+    .select2-selection--single {
+        border-radius: 0;
+        background-color: white;
+        border: 1px solid #7c8b90;
+        outline: 0;
+        padding: 0 16px;
+        font-size: 18px;
+        width: 100%;
+        color: #404b4f;
+        text-align: left;
+        -webkit-appearance: none;
+        height: 48px;
+        // background-image: url(data:image/svg+xml, <svg width=%2724%27 height=%2724%27 viewBox=%270 0 24 24%27 fill=%27none%27 xmlns=%27http://www.w3.org/2000/svg%27> <path fill-rule=%27evenodd%27 clip-rule=%27evenodd%27 d=%27M15.75 9.75L12 4.5L8.25 9.75H15.75ZM15.75 14.25L12 19.5L8.25 14.25H15.75Z%27 fill=%27%2365757B%27/> </svg>);
+        // background-repeat: no-repeat;
+        // background-position: right 10px center;
+        // background-size: 24px 24px;
+
+        .select2-selection__rendered {
+            line-height: 42px;
+            padding: 0;
+        }
+
+        .select2-selection__arrow {
+            top: 50%;
+            right: 8px;
+            transform: translateY(-50%);
+        }
+
+        &:focus,
+        &:hover {
+            outline: 3px solid $gray-tint11;
+        }
+    }
+
+    .select2-results__option--highlighted {
+        &.select2-results__option--selectable {
+            background-color: $gray-tint02;
+            color: $gray-tint11;
+        }
+    }
+}
