--- a/app/apps/main/templates/taaktype_categorie/taaktype_categorie_lijst.html
+++ b/app/apps/main/templates/taaktype_categorie/taaktype_categorie_lijst.html
@@ -27,7 +27,7 @@
                      xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M17 6H15V15H6V17H15V26H17V17H26V15H17V6Z" fill="#ffffff"></path>
                 </svg>
-                Nieuwe taaktype categorie
+                Nieuwe categorie
             </a>
         </div>
         <form>
