--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -4,6 +4,7 @@
 <html lang="nl">
     <head>
         <meta charset="UTF-8">
+        <meta name="git_sha" value="{{ GIT_SHA }}">
         <meta name="viewport"
               content="user-scalable=no, width=device-width, initial-scale=1.0">
         <title>
