--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -573,7 +573,7 @@ textarea {
         color: #404b4f;
         text-align: left;
         -webkit-appearance: none;
-        min-height: 48px;
+        min-height: 48px !important;
         // background-image: url(data:image/svg+xml, <svg width=%2724%27 height=%2724%27 viewBox=%270 0 24 24%27 fill=%27none%27 xmlns=%27http://www.w3.org/2000/svg%27> <path fill-rule=%27evenodd%27 clip-rule=%27evenodd%27 d=%27M15.75 9.75L12 4.5L8.25 9.75H15.75ZM15.75 14.25L12 19.5L8.25 14.25H15.75Z%27 fill=%27%2365757B%27/> </svg>);
         // background-repeat: no-repeat;
         // background-position: right 10px center;
@@ -603,6 +603,7 @@ textarea {
         padding: 4px 0;
         .select2-search {
             .select2-search__field {
+                min-height: 42px;
                 &:focus,
                 &:hover {
                     outline: 0 !important;
@@ -621,22 +622,37 @@ textarea {
             line-height: 1;
 
             .select2-selection__choice {
-                line-height: 28px;
-                padding-left: 20px;
+                line-height: 48px;
+                padding: 10px 35px 10px 8px;
                 display: inline;
                 float: none;
+                background: $green-tint01
+                    url("data:image/svg+xml,%3csvg width=%2732%27 height=%2732%27 viewBox=%270 0 32 32%27 fill=%27black%27 xmlns=%27http://www.w3.org/2000/svg%27%3e%3cpath fill-rule=%27evenodd%27 clip-rule=%27evenodd%27 d=%27M26.6077 6.80752L25.1935 5.39331L16.0011 14.5857L6.80875 5.39331L5.39453 6.80752L14.5869 15.9999L5.39453 25.1923L6.80874 26.6065L16.0011 17.4141L25.1935 26.6065L26.6077 25.1923L17.4153 15.9999L26.6077 6.80752Z%27 fill=%27white%27/%3e%3c/svg%3e")
+                    calc(100% - 8px) / 28px auto no-repeat;
+                border: 0;
+                border-radius: 0;
+                color: $white;
 
                 .select2-selection__choice__remove {
                     height: 100%;
+                    width: 100%;
+                    opacity: 0;
+
+                    span {
+                        display: none;
+                    }
                 }
             }
         }
     }
 
-    .select2-results__option--highlighted {
-        &.select2-results__option--selectable {
-            background-color: $gray-tint02;
-            color: $gray-tint11;
+    .select2-results__option--highlighted,
+    .select2-results__option--selected,
+    .select2-results__option[aria-selected="true"] {
+        &.select2-results__option--selectable,
+        &[aria-selected="true"] {
+            background-color: $gray-tint02 !important;
+            color: $gray-tint11 !important;
         }
     }
 }
