--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -76,6 +76,10 @@
             cursor: pointer;
         }
     }
+    // @TODO @Remco Style the placeholder text correctly
+    input::placeholder {
+        font-size: 10px;
+    }
     @media (min-width: map-get($grid-breakpoints, md)) {
         padding: 0 12px 0 0;
     }
