Styling searchfield and tags

--- a/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanmaken.html
+++ b/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanmaken.html
@@ -31,8 +31,8 @@
                     {{ form.media }}
                     {% csrf_token %}
                     <fieldset>
-                        <div class="form-control__with-helptext js-validation">{{ form.naam|render_rotterdam_formulier }}</div>
-                        <div class="form-control__with-helptext js-validation">{{ form.taaktypes|render_rotterdam_formulier }}</div>
+                        <div class="form-control__with-helptext padding--bottom js-validation">{{ form.naam|render_rotterdam_formulier }}</div>
+                        <div class="form-control__with-helptext padding--bottom js-validation">{{ form.taaktypes|render_rotterdam_formulier }}</div>
                     </fieldset>
                     <!-- Initialize select2 -->
                     <script>
