--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -140,6 +140,7 @@ fieldset {
 
 $form-search-indicator: url("data:image/svg+xml,<svg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'> <path fill-rule='evenodd' clip-rule='evenodd' d='M19.5005 9.75C19.5005 6.825 17.1755 4.5 14.2505 4.5C11.3255 4.5 9.00046 6.825 9.00046 9.75C9.00046 12.675 11.3255 15 14.2505 15C17.1755 15 19.5005 12.675 19.5005 9.75ZM7.50046 9.75C7.50046 6 10.5005 3 14.2505 3C18.0005 3 21.0005 6 21.0005 9.75C21.0005 13.5 18.0005 16.5 14.2505 16.5C12.6478 16.5 11.1822 15.9521 10.0292 15.0319L4.25792 20.8031L3.19727 19.7425L8.96853 13.9712C8.04835 12.8182 7.50046 11.3526 7.50046 9.75Z' fill='#{$gray-tint09}'/> </svg>");
 $form-search-indicator-position: left 10px center !default;
+
 .form-control {
     padding: 8px 16px;
     font-size: 1rem;
@@ -561,6 +562,7 @@ textarea {
 
 .select2-container--default {
     width: 100% !important;
+    margin-top: 0.5rem !important;
     .select2-selection--single,
     .select2-selection--multiple {
         border-radius: 0 !important;
@@ -655,4 +657,9 @@ textarea {
             color: $gray-tint11 !important;
         }
     }
+}
+
+body > .select2-container--default,
+.modal > .select2-container--default {
+    margin-top: 0 !important;
 }
