--- a/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanmaken.html
+++ b/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanmaken.html
@@ -24,6 +24,7 @@
                 <form action="."
                       method="post"
                       data-controller="taaktypecategorieformulier"
+                      data-taaktypecategorieformulier-target="formTaaktypeCategorie"
                       enctype="multipart/form-data"
                       id="taaktypeCategorieForm"
                       novalidate>
@@ -34,12 +35,6 @@
                         <div class="form-control__with-helptext padding--bottom js-validation">{{ form.naam|render_rotterdam_formulier }}</div>
                         <div class="form-control__with-helptext padding--bottom js-validation">{{ form.taaktypes|render_rotterdam_formulier }}</div>
                     </fieldset>
-                    <!-- Initialize select2 -->
-                    <script>
-                        $(document).ready(function() {
-                            $('.select2').select2();
-                        });
-                    </script>
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
                             <button type="reset"
