--- a/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanpassen.html
+++ b/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanpassen.html
@@ -24,6 +24,7 @@
                 <form action="."
                       method="post"
                       data-controller="taaktypecategorieformulier"
+                      data-turbo-frame="_top"
                       data-taaktypecategorieformulier-target="formTaaktypeCategorie"
                       enctype="multipart/form-data"
                       id="taaktypeCategorieForm"
