--- a/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanpassen.html
+++ b/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanpassen.html
@@ -32,8 +32,8 @@
                     {{ form.media }}
                     {% csrf_token %}
                     <fieldset>
-                        <div class="form-control__with-helptext js-validation">{{ form.naam|render_rotterdam_formulier }}</div>
-                        <div class="form-control__with-helptext js-validation">{{ form.taaktypes|render_rotterdam_formulier }}</div>
+                        <div class="form-control__with-helptext padding--bottom js-validation">{{ form.naam|render_rotterdam_formulier }}</div>
+                        <div class="form-control__with-helptext padding--bottom js-validation">{{ form.taaktypes|render_rotterdam_formulier }}</div>
                     </fieldset>
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
