--- a/app/frontend/assets/styles/components/_tabs.scss
+++ b/app/frontend/assets/styles/components/_tabs.scss
@@ -1,5 +1,8 @@
 .list-tabs {
     @include list-clean();
+    margin: 0;
+    padding: 0 $input-padding-y;
+    background-color: $gray-tint02;
 
     li {
         display: inline;
@@ -15,6 +18,19 @@
 
         &.active {
             border-bottom: 4px solid $green-tint01;
+        }
+    }
+}
+
+.container__tab-content {
+    padding: 0 $input-padding-y;
+    background-color: $gray-tint02;
+
+    .tab-content {
+        display: none;
+
+        &.active {
+            display: block;
         }
     }
 }
