--- a/app/apps/context/templates/benc/melding_detail_locaties.html
+++ b/app/apps/context/templates/benc/melding_detail_locaties.html
@@ -25,8 +25,8 @@
                                     Begraafplaats
                                 </h3>
                                 <p>
-                                    {% if melding.meta.begraafplaats %}
-                                        {% vind_in_dict melding.meta_uitgebreid.begraafplaats.choices melding.meta.begraafplaats %}
+                                    {% if melding.signalen_voor_melding.0.meta.begraafplaats %}
+                                        {% vind_in_dict melding.meta_uitgebreid.begraafplaats.choices melding.signalen_voor_melding.0.meta.begraafplaats %}
                                     {% else %}
                                         -
                                     {% endif %}
@@ -35,8 +35,8 @@
                             <li>
                                 <h3 class="h5">Naam overledene</h3>
                                 <p>
-                                    {% if melding.meta.naam_overledene %}
-                                        {{ melding.meta.naam_overledene }}
+                                    {% if melding.signalen_voor_melding.0.meta.naam_overledene %}
+                                        {{ melding.signalen_voor_melding.0.meta.naam_overledene }}
                                     {% else %}
                                         -
                                     {% endif %}
@@ -45,20 +45,20 @@
                         </ul>
                         <ul class="list-clean">
                             <li>
-                                <h3 class="h5">Grafnummer</h3>
+                                <h3 class="h5">Vak</h3>
                                 <p>
-                                    {% if locatie.grafnummer %}
-                                        {{ locatie.grafnummer }}
+                                    {% if locatie.vak %}
+                                        {{ locatie.vak }}
                                     {% else %}
                                         n.v.t.
                                     {% endif %}
                                 </p>
                             </li>
                             <li>
-                                <h3 class="h5">Vak</h3>
+                                <h3 class="h5">Grafnummer</h3>
                                 <p>
-                                    {% if locatie.vak %}
-                                        {{ locatie.vak }}
+                                    {% if locatie.grafnummer %}
+                                        {{ locatie.grafnummer }}
                                     {% else %}
                                         n.v.t.
                                     {% endif %}
