--- a/app/apps/authorisatie/templates/auth/group_list.html
+++ b/app/apps/authorisatie/templates/auth/group_list.html
@@ -66,7 +66,7 @@
                         </td>
                         <td>
                             {% if not object.user_set.all %}
-                                <a href="{% url 'rechtengroep_aanpassen' object.pk %}"
+                                <a href="{% url 'rechtengroep_verwijderen' object.pk %}"
                                     onclick="return confirm('Weet je zeker dat je deze rechtengroep wil verwijderen?')" aria-label="Verwijderen">
                                     {% include "icons/bin.svg" %}
                                 </a>
