--- a/app/frontend/assets/styles/components/_list-mutations.scss
+++ b/app/frontend/assets/styles/components/_list-mutations.scss
@@ -172,6 +172,7 @@
         dd {
             display: block;
             margin: 0;
+            word-break: break-word;
         }
 
         dt {
